# Telegram-MCP

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION_ANALYSIS.md  README.md  SECURITY.md  VERSION  compose.yml  integrat.yaml
.github/: CODEOWNERS  pull_request_template.md
api/: Dockerfile  requirements.txt
api/app/: db.py  (+10 more)
config/: nodes.example.json
docs/: POLLS_AND_REACTIONS.md  ROADMAP.md  access-control.md  api.md  commands.md  formatting.md  icons.md  mcp.md  network.md  schema.md  sdk.md  updates.md  web-ui.md  webhooks.md
fastmcp/: Dockerfile  common.py  requirements.txt  tg_app.py  tg_calendar.py  tg_chat.py  tg_commerce.py  tg_media.py  tg_polls.py  tg_utils.py
k8s/: README.md  configmap.yaml  kustomization.yaml  namespace.yaml  secret.yaml  secret.yaml.example  tgapi-data-pvc.yaml  tgapi-deployment.yaml  tgapi-service.yaml  tgdb-pvc.yaml  tgdb-service.yaml  tgdb-statefulset.yaml  tgmcp-deployment.yaml  tgmcp-service.yaml  tgweb-deployment.yaml  tgweb-rbac.yaml  tgweb-service.yaml
mcp/: Dockerfile  package.json  tsconfig.json
scripts/: generate_manifests.py  test_all.sh  test_bot_api_9x.py  test_command_handler.py  test_commands.py  test_formatters.py  test_media.py  test_media_group.py  test_pin.py  test_polls.py  test_progress.py  test_reactions.py  test_send.py  test_updates.py
sdk/: pyproject.toml
sdk/telegram_api_client/: __init__.py  client.py  commands.py  exceptions.py
templates/: commands_help.html.j2  fleet_status.html.j2  hardware_fleet.j2  hardware_status.j2  macros.j2  prediction_event.j2  (+3 more)
(+201 files in other folders)
